# test-actions-repo

./: .gitignore  Makefile  README.md  pyproject.toml  requirements-dev.txt  test_local.py
.github/workflows/: ci-cd.yml  mutation.yaml  muttest-test.yaml  todo-check.yaml
hello_world/: __init__.py  core.py  main.py
tests/: test_add.py  test_core.py  test_main.py
